test/error/continue_outside_loop.sv
// pattern: encountered continue outside of loop
module top;
    initial continue;
endmodule
